...
            android:background="@color/yellow"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/orange"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/redButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/red"
            android:onClick="chooseNewColor"
...
            android:background="@color/lightBlue"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/lightGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/lightGreen"
            android:onClick="chooseNewColor"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/darkGreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/darkGreen"
            android:onClick="chooseNewColor"
...
