...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <view
        class="sw19.moring03.paint.Views.DrawingView"
        android:id="@+id/drawingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white" />
</FrameLayout>
