...
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:text="@string/stroke_width"
        />

    <SeekBar
        android:id="@+id/strokeWidth"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
